--- a/client /index.html
+++ b/client /index.html
@@ -7,6 +7,25 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <main>
+        <form action="submit">
+            <label for="title">Title</label>
+            <input type="text" id="title">
+
+            <label for="pseudonym">Name</label>
+            <input type="text" id="pseudonym">
+
+            <label for="body">Your story...</label>
+            <textarea id="body" rows="3" cols="20"></textarea>
+
+            <input type="submit" value="Publish">
+        </form>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
