--- a/client /index.html
+++ b/client /index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <header>
 
     </header>
     <main>
-        <form action="submit">
+        <form action="submit" id="story-form">
             <label for="title">Title</label>
             <input type="text" id="title">
 
@@ -28,4 +30,5 @@
 
     </footer>
 </body>
+
 </html>
