--- a/client /index.html
+++ b/client /index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <title>Story Teller</title>
 </head>
-
 <body>
-    <header>
-
+    <header class="decoration p-3 text-blue shadow-lg text-center">
+        <h1>Story Teller</h1>
     </header>
     <main>
-        <form action="submit" id="story-form">
-            <label for="title">Title</label>
-            <input type="text" id="title">
+        <form action="submit" id="story-form" class="p-5 d-flex flex-column">
+            <label for="title" class="py-2 font-weight-bold">Title</label>
+            <input type="text" id="title" class="form-check"> 
 
-            <label for="pseudonym">Name</label>
-            <input type="text" id="pseudonym">
+            <label for="pseudonym" class="py-2">Name</label>
+            <input type="text" id="pseudonym" class="form-check">
 
-            <label for="body">Your story...</label>
-            <textarea id="body" rows="3" cols="20"></textarea>
+            <label for="body" class="py-2">Your story...</label>
+            <textarea id="body" rows="3" class="form-check"></textarea>
 
-            <input type="submit" value="Publish">
+            <input type="submit" value="Publish" class="btn btn-primary form-check">
         </form>
     </main>
     <footer>
