added place for stories to be seen on html

--- a/client /index.html
+++ b/client /index.html
@@ -25,6 +25,20 @@
 
             <input type="submit" value="Publish">
         </form>
+
+        <section id=stories>
+            <h1>Stories Already Told</h1>
+            <table>
+                <tr>
+                    <th>Title</th>
+                    <th>Nom de Plume</th>
+                    <th>Story...</th>
+                </tr>
+            </table>
+            <ul>
+
+            </ul>
+        </section>
     </main>
     <footer>
 
